--- a/templates/partials/sidebar-nav.html
+++ b/templates/partials/sidebar-nav.html
@@ -7,6 +7,7 @@
     {% endfor %}
   </ul>
 
+  {% if config.extra.externalLinks.url %}
   <ul class="head-links">
     {% for link in config.extra.externalLinks -%}
     <li>
@@ -16,4 +17,6 @@
     </li>
     {% endfor %}
   </ul>
+  {% endif %}
+
 </nav>
