--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,18 +1,22 @@
 // SCSS Variables
 $system-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue",
-Helvetica, Arial, sans-serif;
+  Helvetica, Arial, sans-serif;
 $font-color: #000;
 $background-color: #d9d9d9;
 $border-color: #807b7b;
 $link-color: #4e8641;
 $mobile-breakpoint: 1000px;
 $page-width: 750px;
-$sidebar-width: 250px;
+$sidebar-width: 300px;
+$full-page-width: calc($sidebar-width + $page-width);
 
 // From Portfolio
 $root-font-family: "Bitter", serif;
 $link-color: brown;
 $link-color-hover: darkgreen;
+
+// Misc.
+$font-size-small: 14px;
 
 //Mixins
 @mixin min-screen($min-width: $body-width) {
