--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,5 +1,5 @@
 <nav>
-  <ul class="head-links">
+  <ul class="sidebar-nav">
     {% for item in config.extra.menu %}
     <li><a href="{{ get_url(path=item.url )}}">{{ item.name }}</a>
     </li>
