--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,4 +1,4 @@
-// @use "vars";
+@use "vars";
 
 // Core Styles
 * {
@@ -25,9 +25,14 @@ body {
 
 body {
   display: grid;
-  grid-template-columns: minmax(200px, 20%) 1fr;
+  align-items: center;
+  align-self: center;
+  align-content: center;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: vars.$root-font-family;
+  // grid-template-columns: minmax(200px, 20%) 1fr;
+  // width: vars.$full-page-width;
 }
 
 main,
@@ -35,23 +40,66 @@ aside {
   padding: 0.75rem;
 }
 
-main {
-  // background: #d4f2c4;
-  background: inherit;
-}
-
 aside {
   // background: #81cfd9;
   background: inherit;
+  position: fixed;
+  max-width: vars.$sidebar-width;
+}
+
+main {
+  // background: #d4f2c4;
+  background: inherit;
+  position: relative;
+  left: vars.$sidebar-width;
+  width: vars.$page-width;
+}
+
+// Improved typography
+// Headins
+h1 {
+  font-size: 1.75rem;
+  margin-top: 2.25rem;
+  margin-bottom: 1rem;
+}
+
+h2 {
+  font-size: 1.4rem;
+  margin-top: 1.9rem;
+  margin-bottom: 1rem;
+}
+
+h3 {
+  font-size: 1.12rem;
+  margin-top: 1.62rem;
+  margin-bottom: 1rem;
+}
+
+h4,
+h5,
+h6 {
+  font-size: 1rem;
+  margin-top: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 // Links
 a {
   cursor: pointer;
-  -webkit-transition: color 0.1s ease-in-out;
-  -moz-transition: color 0.1s ease-in-out;
-  -o-transition: color 0.1s ease-in-out;
-  transition: color 0.1s ease-in-out;
+  -webkit-transition: text-decoration-color 0.5s ease-in-out;
+  -moz-transition: text-decoration-color 0.5s ease-in-out;
+  -o-transition: text-decoration-color 0.5s ease-in-out;
+  transition: text-decoration-color 1.5s ease-in-out;
+  text-decoration: underline 0.2rem transparent;
+}
+
+a:hover {
+  -webkit-transition: text-decoration-color 0.5s ease-in-out;
+  -moz-transition: text-decoration-color 0.5s ease-in-out;
+  -o-transition: text-decoration-color 0.5s ease-in-out;
+  transition: text-decoration-color 0.5s ease-in-out;
+  text-decoration-color: palevioletred;
+  // text-underline-offset: 0.2em;
 }
 
 // Text Formatting
@@ -70,7 +118,6 @@ i {
 table {
   margin: 0 auto;
   border-collapse: collapse;
-  font-size: 13px;
   max-width: 100%;
 }
 
@@ -86,27 +133,19 @@ table td {
 }
 
 // Code
-pre,
-code {
-  border: 1px solid gray;
-  border-radius: 5px;
-}
-
-code {
-  padding: 2px;
-  background: rgba(0, 0, 0, 0.05);
-  font-size: 14px;
-  line-height: 1;
-}
-
 pre {
-  background: rgba(0, 0, 0, 0.1);
-  padding: 0.25rem 0.5rem;
+  padding: 0.5rem;
+  border-radius: 8px;
+  overflow-x: auto;
+  border: 1px solid lightgray;
+}
 
-  > code {
-    border: 0;
-    background: none;
-  }
+code {
+  border-radius: 3px;
+  padding: 2px 2px;
+  background: rgba(0, 0, 0, 0.05);
+  font-size: vars.$font-size-small;
+  line-height: 1;
 }
 
 kbd {
@@ -115,9 +154,8 @@ kbd {
   box-shadow: inset 0 -1px 0 #959da5;
   border-radius: 3px;
   display: inline-block;
-  font-size: 11px;
   line-height: 10px;
-  padding: 3px 5px;
+  padding: 4px;
   vertical-align: middle;
 }
 
@@ -129,6 +167,7 @@ hr {
   border-top: 1px solid #eee;
   border-bottom: 1px solid #fff;
   clear: both;
+  margin: 1.5rem auto;
 }
 
 // Images
@@ -138,6 +177,7 @@ img {
   -ms-interpolation-mode: bicubic;
   vertical-align: middle;
   max-width: 100%;
+  margin: 1rem 0;
 }
 
 // Table of Contents
@@ -150,8 +190,27 @@ details {
 }
 
 // Table of Contents
-summary {
+details {
   cursor: pointer;
+  // border: 1px solid #aaa;
+  border-radius: 4px;
+  padding: 0.5em 0.5em 0;
+  margin-top: 1rem;
+}
+
+summary {
+  font-weight: bold;
+  margin: -0.5em -0.5em 0;
+  padding: 0.5em;
+}
+
+details[open] {
+  padding: 0.5em;
+}
+
+details[open] summary {
+  // border-bottom: 1px solid #aaa;
+  margin-bottom: 0.5em;
 }
 
 // Blog post reading time
@@ -161,8 +220,15 @@ time {
 
 // Quotes
 blockquote {
-  border-left: solid 2px grey;
+  border-left: solid 2px lightgray;
   padding-left: 1rem;
   margin-left: 1rem;
-  // font-style: italic;
+}
+
+// Footer (sidebar)
+footer {
+  position: fixed;
+  bottom: 1.5rem;
+  max-width: inherit;
+  font-size: vars.$font-size-small;
 }
