--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,11 @@
   <meta name="description" itemprop="about" content="{{config.description}}">
   <title>{{ config.title }}</title>
   {% include "partials/styles.html" %}
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700&display=swap" />
 </head>
 
 <body>
+  <div class="wrapper">
     {# <aside> #}
       {% include "partials/sidebar.html" %}
     {# </aside> #}
@@ -20,6 +22,7 @@
     {% endblock content %}
   </main>
 
+  </div>
 </body>
 
 </html>
