--- a/templates/partials/sidebar-nav.html
+++ b/templates/partials/sidebar-nav.html
@@ -1,5 +1,5 @@
 <nav>
-  <ul class="head-links">
+  <ul class="sidebar-nav">
     {% for link in config.extra.internalLinks -%}
     <li>
       <a href="{{ get_url(path=link.url )}}/" aria-label="{{ link.name }}">{{ link.name }}</a>
@@ -8,7 +8,7 @@
   </ul>
 
   {% if config.extra.externalLinks.url %}
-  <ul class="head-links">
+  <ul class="sidebar-nav">
     {% for link in config.extra.externalLinks -%}
     <li>
       <a href="{{ get_url(path=link.url )}}/" aria-label="{{ link.name }}" target="_blank" rel='noreferrer noopener'>{{
