--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -1,18 +1,14 @@
-<aside>
+<aside class="sidebar">
   <a href="{{ config.base_url | safe }}" class="site-title">
-    <h2>{{ config.title }}</h2>
+    <h2 class="sidebar-title">{{ config.title }}</h2>
   </a>
-
-  {% if page %}
-  <h3 class="sidebar-title">
-    {{ page.title }}
-  </h3>
-  <p>{{ page.description }}
-  </p>
-  {% include "partials/toc.html" %}
-  {% endif %}
 
   <p>{{ config.description }}</p>
   {% include "partials/sidebar-nav.html" %}
+
+  <footer>
+    <p>© 2023 Miguel Pimentel | Powered by <a href="https://www.getzola.org/">Zola</a>.
+    </p>
+  </footer>
 
 </aside>
