--- a/templates/partials/toc.html
+++ b/templates/partials/toc.html
@@ -1,19 +1,19 @@
 {% if page.toc %}
-{# <details open> #}
-  <details>
+<details open>
+  {# <details> #}
     <summary>
       Table of Contents
     </summary>
-    <ul class="sublist-toc">
+    <ul class="table-of-content">
       {% for h1 in page.toc %}
       <li>
         <a href="{{ h1.permalink | safe }}">{{ h1.title }}</a>
         {% if h1.children %}
-        <ul class="sublist-toc">
+        <ul class="table-of-content">
           {% for h2 in h1.children %}
           <li>
             <a href="{{ h2.permalink | safe }}">{{ h2.title }}</a>
-            <ul class="sublist-toc">
+            <ul class="table-of-content">
               {% for h3 in h2.children %}
               <li>
                 <a href="{{ h3.permalink | safe }}">{{ h3.title }}</a>
