--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -28,7 +28,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: vars.$root-font-family;
-  grid-template-columns: minmax(200px, 20%) 1fr;
+  /* grid-template-columns: minmax(200px, 20%) 1fr; */
   // width: vars.$full-page-width;
 }
 
