--- a/sass/_classes.scss
+++ b/sass/_classes.scss
@@ -1,7 +1,14 @@
 @use "vars";
 
 .wrapper {
-  margin: 0 auto;
+  // margin: 0 auto;
+  // margin: auto 0;
+  display: grid;
+  // min-height: 98vh;
+  // grid-template-columns: auto;
+  grid-template-rows: minmax(vars.$sidebar-width, 10%) 1fr;
+  // grid-template-rows: auto;
+  // grid-template-columns: minmax(vars.$sidebar-width, 22%) 1fr;
 }
 
 // Sidebar
