--- a/templates/partials/toc.html
+++ b/templates/partials/toc.html
@@ -1,6 +1,6 @@
 {% if page.toc %}
-<details open>
-  {# <details> #}
+{# <details open> #}
+  <details>
     <summary>
       Table of Contents
     </summary>
