--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,22 +1,20 @@
 // SCSS Variables
+// Fonts
+$font-family: "Bitter", serif;
 $system-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue",
   Helvetica, Arial, sans-serif;
+$font-size-small: 14px;
+// Colors
 $font-color: #000;
 $background-color: #d9d9d9;
 $border-color: #807b7b;
 $link-color: #4e8641;
-$mobile-breakpoint: 1000px;
-$page-width: 699px;
-$sidebar-width: 299px;
-$full-page-width: calc($sidebar-width + $page-width);
-
-// From Portfolio
-$root-font-family: "Bitter", serif;
-$link-color: brown;
 $link-color-hover: darkgreen;
-
-// Misc.
-$font-size-small: 14px;
+// Layout
+$page-width: 700px;
+$sidebar-width: 300px;
+$full-page-width: calc($sidebar-width + $page-width + 1rem);
+$mobile-breakpoint: 50rem;
 
 //Mixins
 @mixin min-screen($min-width: $body-width) {
