--- a/templates/partials/post-loop.html
+++ b/templates/partials/post-loop.html
@@ -2,9 +2,12 @@
 {% for page in section.pages %}
 <hr>
 <article class="post">
-  <time itemprop="datePublished" datetime="{{ page.date | safe }}">{{ page.date | date(format="%B %e, %Y") | safe }} • {{
+  <time itemprop="datePublished" datetime="{{ page.date | safe }}">{{ page.date | date(format="%B %e, %Y") | safe }} •
+    {{
     page.reading_time }} minutes</time>
-  <a href="{{ page.permalink }}"><h1 class="post-title">{{ page.title | safe }}</h1></a>
+  <a href="{{ page.permalink }}">
+    <h1 class="post-title">{{ page.title | safe }}</h1>
+  </a>
   {% if page.description %}
   <p>{{ page.description | safe }}</p>
   {% endif %}
