--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -1,14 +1,12 @@
-<aside class="sidebar">
-  <a href="{{ config.base_url | safe }}" class="site-title">
-    <h2 class="sidebar-title">{{ config.title }}</h2>
-  </a>
+{# <aside class="sidebar box"> #}
+  <aside class="sidebar">
+    <a href="{{ config.base_url | safe }}" class="site-title">
+      <h2 class="sidebar-title">{{ config.title }}</h2>
+    </a>
 
-  <p>{{ config.description }}</p>
-  {% include "partials/sidebar-nav.html" %}
-<!-- 
-  <footer>
-    <p>© 2023 Miguel Pimentel | Powered by <a href="https://www.getzola.org/">Zola</a>.
-    </p>
-  </footer>
- -->
-</aside>
+    <p>{{ config.description }}</p>
+    {% include "partials/sidebar-nav.html" %}
+
+    {% include "partials/footer-sidebar.html" %}
+
+  </aside>
