--- a/templates/post.html
+++ b/templates/post.html
@@ -3,6 +3,7 @@
 <!-- Layout for blog posts. -->
 {% block content %}
 <article class="post">
+  {% include "partials/breadcrumbs.html" %}
   <time itemprop="datePublished" datetime="{{ page.date | safe }}">{{ page.date | date(format="%B %e, %Y") | safe }} • {{
     page.reading_time | safe }} minutes</time>
     <h1 class="post-title">{{ page.title | safe }}</h1>
