--- a/templates/partials/footer-sidebar.html
+++ b/templates/partials/footer-sidebar.html
@@ -1,4 +1,6 @@
 <footer class="footer-sidebar">
-  <p>© 2023 Miguel Pimentel | Powered by <a href="https://www.getzola.org/">Zola</a>.
+  <p>Powered by <a href="https://www.getzola.org/">Zola</a> and <a
+      href="https://github.com/semanticdata/zola-testing">Testing</a>.
+    <br>© 2023 Miguel Pimentel
   </p>
 </footer>
