--- a/templates/categories/list.html
+++ b/templates/categories/list.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<h1>Categories</h1>
 <ul class="base-list">
   {% for category in terms %}
   <li>
