--- a/templates/partials/breadcrumbs.html
+++ b/templates/partials/breadcrumbs.html
@@ -5,10 +5,10 @@
   {% if loop.first %}
   {% continue %}
   {% endif %}
-  <span class="breadcrumb-separator"> > </span>
+  <span class="breadcrumb-separator"> / </span>
   {% set section = get_section(path=ancestor) %}
   <a class="breadcrumb-path" href="{{ section.permalink }}">{{ section.title }}</a>
   {% endfor %}
-  <span class="breadcrumb-separator"> > </span>
+  <span class="breadcrumb-separator"> / </span>
   <a class="breadcrumb-path active" href="{{ current.permalink }}">{{ current.title }}</a>
 </div>
