local font test

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
   <meta name="description" itemprop="about" content="{{config.description}}">
   <title>{{ config.title }}</title>
   {% include "partials/styles.html" %}
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700&display=swap" />
+  {# <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700&display=swap" /> #}
 </head>
 
 <body>
