--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -24,6 +24,9 @@ body {
 }
 
 body {
+  margin: 0;
+  padding: 0;
+  background: vars.$background-color;
   font-family: vars.$font-family;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -41,6 +44,7 @@ aside {
 aside {
   max-width: vars.$sidebar-width;
   position: fixed;
+  top: 50px;
 }
 
 main {
