--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -26,7 +26,7 @@ header {
   border-bottom: solid 1px grey;
   width: 100%;
   background: vars.$background-color;
-  max-width: calc(vars.$sidebar-width + vars.$page-width);
+  max-width: calc(vars.$sidebar-width + vars.$page-width + 1rem);
   z-index: 999;
 }
 
