--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -6,7 +6,7 @@ $system-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans
 $font-size-small: 14px;
 // Colors
 $font-color: #000;
-$background-color: #d9d9d9;
+$background-color: #ececec;
 $border-color: #807b7b;
 $link-color: #4e8641;
 $link-color-hover: darkgreen;
