working on layout

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -13,18 +13,24 @@
   box-sizing: inherit;
 }
 
+main,
+aside,
+header,
+footer {
+  border: solid 1px rebeccapurple;
+}
+
 html,
 body {
   text-rendering: optimizeLegibility;
-  line-height: 1.5;
-  font-size: 100%;
   box-sizing: border-box;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
+  font-size: 100%;
+  line-height: 1.5;
 }
 
 body {
-  margin-top: 0;
   background: vars.$background-color;
   font-family: vars.$font-family;
   -webkit-font-smoothing: antialiased;
@@ -32,42 +38,51 @@ body {
 }
 
 // Layout
+.wrapper {
+  max-width: vars.$full-page-width;
+  margin: 0 auto;
+}
+
+footer,
 main,
 aside {
-  display: inline-flex;
-  flex-direction: column;
-  padding: 0.75rem;
-  // border: solid 1px rebeccapurple;
+  padding: 1rem;
+}
+
+main {
+  position: relative;
+  max-width: vars.$page-width;
+  left: calc(vars.$sidebar-width + 1rem);
 }
 
 aside {
   max-width: vars.$sidebar-width;
   position: fixed;
-  top: 3.5rem;
+  text-align: justify;
 }
 
-main {
-  max-width: vars.$page-width;
-  position: relative;
-  margin-bottom: 1.5rem;
-  left: calc(vars.$sidebar-width + 1rem);
-  top: 3.5rem;
+header {
+  max-width: calc(vars.$sidebar-width + vars.$page-width + 1rem);
+  max-width: vars.$sidebar-width;
 }
 
-.wrapper {
-  width: vars.$full-page-width;
-  margin: 0 auto;
-}
-
-// Footer
-footer.footer-sidebar {
+.footer-sidebar {
+  // text-align: center;
+  // position: fixed;
+  bottom: 1rem;
+  // padding-right: 1rem;
+  // right: 1rem;
   position: fixed;
-  bottom: 1.5rem;
-  max-width: inherit;
   font-size: vars.$font-size-small;
-  // background: maroon;
+  width: vars.$sidebar-width;
+  // margin: 0;
+  // width: unset;
+  // bottom: 1.5rem;
+  text-align: center;
+  display: none;
 }
-footer.footer-main {
+
+.footer-main {
   display: none;
 }
 
@@ -93,7 +108,8 @@ footer.footer-main {
       display: none;
     }
     &.footer-main {
-      display: inline-flex;
+      display: none;
+      // display: block;
       padding-bottom: 1.5rem;
       font-size: 0.9rem;
       max-width: 100%;
@@ -104,8 +120,8 @@ footer.footer-main {
     }
   }
 }
+
 // Improved typography
-// Headins
 h1 {
   font-size: 1.75rem;
   margin-top: 2.25rem;
@@ -231,7 +247,6 @@ img {
 
 // Table of Contents
 details {
-  // border: 1px solid #aaa;
   cursor: pointer;
   border-radius: 4px;
   padding: 0.5em 0.5em 0;
@@ -249,7 +264,6 @@ details[open] {
 }
 
 details[open] summary {
-  // border-bottom: 1px solid #aaa;
   margin-bottom: 0.5em;
 }
 
@@ -263,39 +277,4 @@ blockquote {
   border-left: solid 2px lightgray;
   padding-left: 1rem;
   margin-left: 1rem;
-}
-
-// Sidebar
-.sidebar-title {
-  color: vars.$font-color;
-  margin-top: initial;
-}
-
-.sidebar-nav {
-  list-style-type: none;
-  padding-left: 1rem;
-  line-height: 1.75;
-  & li {
-    padding-bottom: 0.25rem;
-  }
-}
-
-// Table of Contents
-.table-of-content {
-  list-style-type: circle;
-  font-size: vars.$font-size-small; //16px
-  line-height: 1.75;
-  // padding-left: 2rem;
-  // padding-right: 0.5rem;
-}
-
-// Boxes and Shadows
-.box {
-  border-radius: 0.5rem;
-  box-shadow: 1px 2px 2px 1px rgba(0, 0, 0, 0.3);
-  @include vars.transition(box-shadow 0.5s ease-in-out);
-}
-
-.box:hover {
-  box-shadow: 2px 4px 8px 2px rgba(0, 0, 0, 0.3);
 }
