fix home breadcrumb link, layout mobile test

--- a/templates/partials/breadcrumbs.html
+++ b/templates/partials/breadcrumbs.html
@@ -1,5 +1,5 @@
 <section class="breadcrumb-container">
-  <a class="breadcrumb-path" href="/">Home</a>
+  <a class="breadcrumb-path" href="./">Home</a>
   {% set current = section | default(value=page) %}
   {% for ancestor in current.ancestors %}
   {% if loop.first %}
