--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -62,7 +62,7 @@ aside {
 }
 
 header {
-  max-width: calc(vars.$sidebar-width + vars.$page-width + 1rem);
+  // max-width: calc(vars.$sidebar-width + vars.$page-width + 1rem);
   max-width: vars.$sidebar-width;
 }
 
@@ -70,14 +70,9 @@ header {
   // text-align: center;
   // position: fixed;
   bottom: 1rem;
-  // padding-right: 1rem;
-  // right: 1rem;
   position: fixed;
   font-size: vars.$font-size-small;
   width: vars.$sidebar-width;
-  // margin: 0;
-  // width: unset;
-  // bottom: 1.5rem;
   text-align: center;
   display: none;
 }
@@ -89,34 +84,40 @@ header {
 // Small Screens
 @media only screen and (max-width: vars.$mobile-breakpoint) {
   .wrapper {
-    width: auto;
+    // width: auto;
   }
   aside {
-    max-width: 100%;
     position: initial;
+    max-width: 100%;
+    margin-bottom: 1rem;
   }
   main {
-    left: 0;
-    margin-bottom: 0;
+    position: initial;
+    // height: 100vh;
+    // overflow-y: visible;
   }
   main,
   aside {
-    display: flex;
+    // display: flex;
   }
   footer {
-    &.footer-sidebar {
-      display: none;
-    }
+    //   &.footer-sidebar {
+    //     display: none;
+    //   }
     &.footer-main {
-      display: none;
-      // display: block;
-      padding-bottom: 1.5rem;
-      font-size: 0.9rem;
-      max-width: 100%;
-      & p {
-        text-align: center;
-        width: vars.$full-page-width;
-      }
+      //     display: none;
+      display: block;
+      padding: 0.5rem;
+      padding-bottom: 1rem;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+      text-align: center;
+      vertical-align: middle;
+      //     font-size: 0.9rem;
+      //     max-width: 100%;
+      //     & p {
+      //       width: vars.$full-page-width;
+      //     }
     }
   }
 }
