--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 
-{% include "partials/sidebar.html" %}
-
+<!-- Layout for the Homepage. -->
 {% block content %}
 {{ section.content | safe }}
 {% endblock content %}
