--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -4,36 +4,39 @@ $font-family: "Bitter", serif;
 $system-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue",
   Helvetica, Arial, sans-serif;
 $font-size-small: 14px;
+// $font-size-big: 18px;
 // Colors
-$font-color: #000;
+// $font-color: #000;
 $background-color: #ececec;
-$border-color: #807b7b;
-$link-color: #4e8641;
-$link-color-hover: darkgreen;
+$background-color-gray: #e0e0e0;
+// $border-color: #807b7b;
+// $link-color: #4e8641;
+// $link-color-hover: darkgreen;
+$underline-color: palevioletred;
 // Layout
 $page-width: 700px;
 $sidebar-width: 300px;
 $full-page-width: calc($sidebar-width + $page-width + 1rem);
-$mobile-breakpoint: 50rem;
+$mobile-breakpoint: 1050px; // 50rem
 
 //Mixins
-@mixin min-screen($min-width: $body-width) {
-  @media screen and (min-width: $min-width) {
-    @content;
-  }
-}
+// @mixin min-screen($min-width: $body-width) {
+//   @media screen and (min-width: $min-width) {
+//     @content;
+//   }
+// }
 
-@mixin max-screen($max-width: $body-width) {
-  @media screen and (max-width: $max-width) {
-    @content;
-  }
-}
+// @mixin max-screen($max-width: $body-width) {
+//   @media screen and (max-width: $max-width) {
+//     @content;
+//   }
+// }
 
-@mixin box-sizing($type: border-box) {
-  -webkit-box-sizing: $type;
-  -moz-box-sizing: $type;
-  box-sizing: $type;
-}
+// @mixin box-sizing($type: border-box) {
+//   -webkit-box-sizing: $type;
+//   -moz-box-sizing: $type;
+//   box-sizing: $type;
+// }
 
 @mixin transition($args...) {
   -webkit-transition: $args;
