--- a/templates/post.html
+++ b/templates/post.html
@@ -4,16 +4,9 @@
 {% block content %}
 <article class="post">
   {% include "partials/breadcrumbs.html" %}
-  <time itemprop="datePublished" datetime="{{ page.date | safe }}">{{ page.date | date(format="%B %e, %Y") | safe }} • {{
+  <time itemprop="datePublished" datetime="{{ page.date | safe }}">{{ page.date | date(format="%B %e, %Y") | safe }} •
+    {{
     page.reading_time | safe }} minutes</time>
-    <h1 class="post-title">{{ page.title | safe }}</h1>
-  {% if page.description %}
-  <p>{{ page.description | safe }}</p>
-  {% endif %}
-  {% if page.toc %}
-  {% include "partials/toc.html" %}
-  {% endif %}
-  <hr>
   {{ page.content | safe }}
   {% if page.tags %}
   <small>tags: <em>{{ page.tags | safe }}</em></small>
