--- a/templates/section.html
+++ b/templates/section.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 
-<!-- Layout for projects section. -->
+<!-- Layout for all non-blog sections. -->
 {% block content %}
-<h1>{{ section.title | safe }}</h1>
-{{ section.content | safe }}
 {% include "partials/page-loop.html" %}
 {% endblock content %}
