--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" itemprop="about" content="{{config.description}}">
   <title>{{ config.title }}</title>
-  {% include "partials/styles.html" %}
+  <link rel="stylesheet" href="{{ get_url(path='main.css') | safe }}">
   {#
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700&display=swap" /> #}
 </head>
