--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
       {# <footer class="footer-sidebar box">
         <p>Powered by
           <a href="https://www.getzola.org/">Zola</a> and <a
-            href="https://github.com/semanticdata/zola-testing">Testing</a>.
+            href="https://github.com/semanticdata/zola-sandbox">Sandbox</a>.
           <br>© 2023 Miguel Pimentel
         </p>
       </footer> #}
@@ -61,7 +61,7 @@
 
     {# <footer class="footer-main box">
       <p>Powered by <a href="https://www.getzola.org/">Zola</a> and <a
-          href="https://github.com/semanticdata/zola-testing">Testing</a>.
+          href="https://github.com/semanticdata/zola-sandbox">Sandbox</a>.
         <br>© 2023 Miguel Pimentel
       </p>
     </footer> #}
