--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -75,3 +75,18 @@
 // .box:hover {
 //   box-shadow: 2px 4px 8px 2px rgba(0, 0, 0, 0.3);
 // }
+
+footer p {
+  margin: 0;
+  text-align: center;
+}
+
+.grow {
+  flex-grow: 1;
+  height: 1rem;
+  border: solid 1px rebeccapurple;
+  position: relative;
+  max-width: vars.$page-width;
+  left: calc(vars.$sidebar-width + 1rem);
+  margin-bottom: 1rem;
+}
