codeblock line number styling

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -164,7 +164,7 @@ table td {
 
 // Code
 pre {
-  padding: 0.5rem;
+  // padding: 0.5rem;
   border-radius: 8px;
   border: 1px solid lightgray;
 }
