--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -80,3 +80,37 @@ footer p {
   margin: 0;
   text-align: center;
 }
+
+// Codeblocks - Line Numbers
+pre {
+  padding: 1rem;
+  overflow: auto;
+}
+/* The line numbers already provide some kind of left/right padding */
+pre[data-linenos] {
+  padding: 0;
+  padding: 0.5rem 0;
+}
+pre table td {
+  // padding: 0;
+  border: none;
+}
+/* The line number cells */
+pre table td:nth-of-type(1) {
+  text-align: center;
+  user-select: none;
+}
+pre mark {
+  /* If you want your highlights to take the full width */
+  display: block;
+  /* The default background colour of a mark is bright yellow */
+  background-color: rgba(254, 252, 232, 0.9);
+}
+pre table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+pre code {
+  padding: 0;
+}
